[tool.poetry]
name = "heckorator"
version = "0.1.5"
description = "the most readable decorators you've ever seen"
authors = ["RocketRace <hiemankaranteenissa@proton.me>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/RocketRace/heckorator"

[tool.poetry.dependencies]
python = ">=3.12"
bdfparser = "^2.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
